--- a/E-CommerceCaseAndroid/app/src/main/res/layout/item_product.xml
+++ b/E-CommerceCaseAndroid/app/src/main/res/layout/item_product.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp">
+    android:layout_margin="@dimen/card_margin"
+    app:cardCornerRadius="@dimen/card_corner_radius"
+    app:cardElevation="@dimen/card_elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:padding="@dimen/spacing_small">
 
             <ImageView
                 android:id="@+id/imageViewProduct"
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:padding="@dimen/spacing_small">
 
             <TextView
                 android:id="@+id/textViewTitle"
@@ -42,16 +42,16 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textSize="12sp"
+                android:textSize="@dimen/text_tiny"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/spacing_tiny"
                 android:textColor="@android:color/holo_red_dark"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_small"
                 android:textStyle="bold" />
 
         </LinearLayout>
