--- a/E-CommerceCaseAndroid/app/src/main/res/layout/item_slider.xml
+++ b/E-CommerceCaseAndroid/app/src/main/res/layout/item_slider.xml
@@ -40,6 +40,18 @@
         app:layout_constraintStart_toEndOf="@id/imageContainer"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textViewSliderCategory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginTop="@dimen/spacing_tiny"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="@dimen/text_tiny"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imageContainer"
+        app:layout_constraintTop_toBottomOf="@id/textViewSliderTitle" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
